--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.27.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
